fixed the button for the buy and sell  in singlestock card on mobile and desktop flex layout

--- a/src/assets/scss/components/singlelinebase.scss
+++ b/src/assets/scss/components/singlelinebase.scss
@@ -295,6 +295,8 @@
             font-weight: bold;
             font-size: 15.4204px;
             margin: 5px;
+            flex-basis: 100%;
+            border-radius: 5px;
         }
 
         .buying {
@@ -311,6 +313,8 @@
             font-weight: bold;
             font-size: 15.4204px;
             margin: 5px;
+            flex-basis: 100%;
+            border-radius: 5px;
         }
 
     }
